# vegetation-pcd-analysis

./: .gitignore  README.md
azure_platform/: Dockerfile  README.md  __init__.py  contracts.md  job1_ground_removal.sh  job2_clustering.sh  job2_resume_convert_and_index.sh  job3_features.sh  requirements.txt  run_all.sh
docs/: canopy_structure_report.md
images/: lai_vs_voxel_size.csv  volume_vs_alpha_radius.csv  volume_vs_voxel_size.csv
images/volume_sensitivity_experiment/: convex_hull_baseline.csv  volume_vs_alpha_radius.csv  volume_vs_voxel_size.csv  volume_vs_voxel_size_filled.csv
research_papers/: backup.txt
scripts/: CMakeLists.txt  ae_downsample_reconstruct_demo.py  analyze_clustering_results.py  calculate_ndvi.ipynb  clustering_analysis.ipynb  clustering_only.cpp  clustering_params.txt  compare_ndvi_species.py  compare_smrf_ransac.py  compute_canopy_structure.py  compute_row_features.py  convert_to_ply.cpp  data_exploration.ipynb  enhanced_volume_calculation.ipynb  ground_removal_only.cpp  inspect_laz_files.ipynb  lai_voxel_size_sensitivity.py  merge_las_points.py  objct_generator.py  pcd_to_jpg.ipynb  pcd_to_ndvi_las.py  pcl_clustering.cpp  pipeline_config.py  pointcloud_transformer_autoencoder.py  polynoms_volume_calculation.ipynb  read_plot_voxelization.ipynb  run_features.sh  run_pipeline.sh  smrf_ground_classification.py  synthetic_volume_validation.ipynb  tile_local_vineyard_ms.py  visualize_row_metrics.ipynb  visualize_tutorial_clusters.py  volume_calculation.ipynb  volume_sensitivity.py  volume_sensitivity_experiment.py  voxelization.ipynb
scripts/alternatives/: clustering_analysis.ipynb  pcd_to_jpg.ipynb  pcl_clustering.cpp  rasterizing.ipynb
scripts/images/synthetic_validation/: summary.csv
scripts/out_cluster/: clustering_only_log.csv
scripts/out_cluster_las/: row_features.parquet
segmentation_baseline/: README.md  requirements.txt
segmentation_baseline/config/: randlanet_config.yaml
segmentation_baseline/data/: README_data_layout.md
segmentation_baseline/scripts/: dry_run_check.py  evaluate_segmentation.py  infer_randlanet.py  prepare_dataset.py  train_randlanet.py
segmentation_baseline/src/: __init__.py  dataset.py  features.py  io_las.py  label_mapping.py  metrics.py  model_wrapper.py  postprocess.py  tile_builder.py  utils.py
vineyard_app/backend/: requirements.txt
(+20 files in other folders)
